[gd_scene load_steps=4 format=3 uid="uid://barl4q1kugrmm"]

[ext_resource type="Script" uid="uid://do7kkb4ijqk5p" path="res://scenes/gameplay/pause-layer/pause-layer.gd" id="2"]
[ext_resource type="Script" uid="uid://cmp47ven52wms" path="res://scenes/gameplay/pause-layer/arrow_stackedsprite.gd" id="2_nevgd"]
[ext_resource type="Texture2D" uid="uid://d37xcbpb2ux7c" path="res://assets/sprites/arrow.png" id="3_nevgd"]

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.243137, 0.211765, 0.290196, 0.717647)

[node name="gameplay_margin_container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="gameplay_margin_container"]
layout_mode = 2
size_flags_horizontal = 4

[node name="arrow_stackedsprite" type="Node2D" parent="gameplay_margin_container/VBoxContainer"]
scale = Vector2(4, 4)
script = ExtResource("2_nevgd")
texture = ExtResource("3_nevgd")
sprite_hframes = 4
metadata/_custom_type_script = "uid://ch2y1mqww1d7b"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="VBoxOptions" type="VBoxContainer" parent="MarginContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -38.0
offset_right = 58.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="Resume" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
focus_mode = 2
mouse_filter = 1
text = "RESUME"

[node name="MainMenu" type="LinkButton" parent="MarginContainer/Control/VBoxOptions"]
layout_mode = 2
focus_mode = 2
mouse_filter = 1
text = "MAIN MENU"

[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxOptions/MainMenu" to="." method="_on_main_menu_pressed"]
